--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -42,6 +42,10 @@ $layout-width: 1920px + $layout-space-horizontal*2 !default
 $layout-text-space-horizontal: 40px !default
 // максимальная ширина текстового блока
 $layout-text-width: 640px + $layout-text-space-horizontal*2 !default
+// минимальные отступы слева и справа у блокоа выходящего за пределы текста
+$layout-flood-space-horizontal: 40px !default
+// максимальная ширина текстового блока выходящего за пределы текста
+$layout-flood-width: 768px + $layout-text-space-horizontal*2 !default
 
 // form
 $color-form-text: $text-color-light !default
