--- a/src/sass/components/_files.sass
+++ b/src/sass/components/_files.sass
@@ -1,5 +1,4 @@
-/*download files items*/
-/*files item*/
+/*files links*/
 .file
 	$file-icon-size: 32px
 	display: inline-block
@@ -39,5 +38,4 @@
 		font-size: 1.4rem
 		color: $text-color-light
 
-/*files item end*/
-/*download files items end*/
+/*files links end*/
