--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -40,6 +40,8 @@ $layout-space-horizontal: 20px !default
 $layout-width: 1920px + $layout-space-horizontal*2 !default
 // минимальные отступы слева и справа у текствого блока
 $layout-text-space-horizontal: 40px !default
+$layout-text-space-horizontal-md: 30px !default
+$layout-text-space-horizontal-sm: 15px !default
 // максимальная ширина текстового блока
 $layout-text-width: 640px + $layout-text-space-horizontal*2 !default
 // минимальные отступы слева и справа у блокоа выходящего за пределы текста
