--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -1027,104 +1027,23 @@ div.cselect
 /*select end*/
 /*FORM STYLE end*/
 
-/*download files items*/
-/*depict files*/
-[class|="depict-files"],
-[class*=" depict-files-"]
-	background: url(../../img/sprite-files.png) 0 0 no-repeat
-	display: inline-block
-	vertical-align: top
 
-.depict-files
-	&-pdf
-		background-position: 0 0
-		width: 39px
-		height: 46px
+/*datetime*/
+.datetime
+	display: block
+	font-style: normal
+	margin-bottom: $bottom-space
 
-	&-xls
-		background-position: 0 -66px
-		width: 39px
-		height: 46px
-
-	&-doc
-		background-position: 0 -132px
-		width: 39px
-		height: 46px
-
-	&-zip
-		background-position: 0 -198px
-		width: 39px
-		height: 46px
-
-	&-jpg
-		background-position: 0 -264px
-		width: 39px
-		height: 46px
-
-/*depict files end*/
-
-/*files item*/
-.files
-	padding: 0 0 20px
-	margin-left: -30px
-	font-size: 0
-	line-height: 1
-	letter-spacing: -4px
-
-	&-item
-		font-size: $font-size
-		line-height: $line-height
-		letter-spacing: normal
-
-	& .files-item
-		display: inline-block
-		vertical-align: top
-		width: 33.29%
-		padding: 0 0 48px 30px
-
-.file
-	font-size: 14px
-	line-height: 18px
-	padding: 0 0 0 53px
-	position: relative
-	min-height: 46px
-
-	&__title
-		padding: 5px 0 7px
-
-	&__title a
-		text-decoration: none
-		margin: 0 0 0 -53px
-		display: inline-block
-		padding: 0 0 0 53px
-
-	&__title a span
-		padding-top: 5px
-		text-decoration: underline
-
-	.no-touchevents & a:hover span
-		text-decoration: none
-
-	& [class*="depict-files-"]
-		position: absolute
-		left: 0
-		top: 0
-
-	&__info
-		color: #666
-
-/*files item end*/
-/*download files items end*/
+/*datetime end*/
 
 /*view print*/
 .view-print
-	float: right
 	padding: 6px 12px
+	margin-bottom: $bottom-space
 	background: #f9f9f9
 	line-height: 1
-	color: #000
+	color: black
 	text-decoration: none
-	margin-left: 30px
 	transition-property: background
 	transition-duration: $animation-speed
 
@@ -1132,22 +1051,26 @@ div.cselect
 		background-color: #eaeaea
 
 	svg
+		display: inline-block
 		vertical-align: middle
-		width: 16px
+		width: 20px
+		height: 20px
 		margin-right: 5px
 
 	span
 		display: inline-block
 		vertical-align: middle
 
-	@media only screen and (max-width: 979px)
+	+media('<tablet-lg')
 		font-size: 14px
 
-	@media only screen and (max-width: 639px)
+	+media('<mobile-lg')
+		padding: 15px
+
 		& svg
-			vertical-align: top
 			margin-right: 0
 
 		& span
 			display: none
+
 /*view print end*/
