--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -28,6 +28,12 @@
 
 	background-color: whitesmoke
 
+	+media('<desktop-lg')
+		margin-right: 0
+
+	+media('<tablet-lg')
+		margin-left: 0
+
 .header
 	position: relative
 	z-index: 5
@@ -42,6 +48,9 @@
 
 	background-color: sandybrown
 
+	+media('<tablet-lg')
+		display: none
+
 .aside
 	display: inline
 	float: right
@@ -49,6 +58,9 @@
 	width: 240px
 
 	background-color: sandybrown
+
+	+media('<desktop-lg')
+		display: none
 
 .footer
 	margin: 0 auto
@@ -65,6 +77,9 @@
 	+padding-horizontal($layout-space-horizontal)
 	+push-auto
 
+	+media('<tablet-lg')
+		+padding-horizontal(0)
+
 .max-wrap-text
 	max-width: $layout-text-width
 
@@ -73,6 +88,12 @@
 	+padding-horizontal($layout-text-space-horizontal)
 	+push-auto
 
+	+media('<tablet-lg')
+		+padding-horizontal($layout-text-space-horizontal-md)
+
+	+media('<tablet-sm')
+		+padding-horizontal($layout-text-space-horizontal-sm)
+
 .max-wrap-flood
 	max-width: $layout-flood-width
 
@@ -80,5 +101,11 @@
 	max-width: $layout-flood-width
 	+padding-horizontal($layout-flood-space-horizontal)
 	+push-auto
+
+	+media('<tablet-lg')
+		+padding-horizontal($layout-text-space-horizontal-md)
+
+	+media('<tablet-sm')
+		+padding-horizontal($layout-text-space-horizontal-sm)
 
 /*LAYOUT end*/
