--- a/src/sass/print/_print.sass
+++ b/src/sass/print/_print.sass
@@ -1,9 +1,11 @@
+@import "../utils/mixins"
+
 @media print
 	*,
 	*:before,
 	*:after
 		background: transparent !important
-		color: #000 !important
+		color: black !important
 		box-shadow: none !important
 		text-shadow: none !important
 
@@ -42,20 +44,71 @@
 	h2, h3
 		page-break-after: avoid
 
-	.sidebar,
-	.aside,
-	.print-hidden
+	hr
+		border-color: black
+
+	body
+		font-family: Arial, Helvetica, sans-serif
+		font-size: 10pt
+		line-height: 1.5 !important
+
+	h1
+		font-size: 20pt !important
+		line-height: 1.3 !important
+
+	h2
+		font-size: 18pt !important
+		line-height: 1.4 !important
+
+	h3, .main-slider-title__item
+		font-size: 16pt !important
+		line-height: 1.5 !important
+
+	h4, blockquote q
+		font-size: 14pt !important
+		line-height: 1.5 !important
+
+	h5, blockquote cite
+		font-size: 12pt !important
+		line-height: 1.6 !important
+
+	h6
+		font-size: 8pt !important
+		line-height: 1.8 !important
+
+	table td, table th, table
+		border: 1px solid black !important
+		font-size: 9pt !important
+		color: black !important
+		padding: 3pt !important
+
+		& > *
+			padding: 0!important
+
+	.sidebar, .aside, .print-hidden, .view-print, .nav, .nav-list, .breadcrumbs, .breadcrumbs__list, form, .footer, .spacer, [class*="btn-"]
 		display: none !important
 
-	.content
-		margin-left: 0 !important
-		margin-right: 0 !important
+	.main, .content, .layout, .layout-text, .layout-flood, .header, .header__holder, .blockquote, .blockquote *, blockquote, .imgl, .imgr, .imgc, .table-auto table
+		+print-reset
+
+	h1, h2, h3, h4, h5, h6, p, ul, ol, .table-auto, table, .imgl, .imgr, .imgc, .datetime
+		+prints-space-bottom-sm
+
+	.header, .blockquote, hr, blockquote
+		+prints-space-bottom-md
 
 	.logo
 		background: none !important
 
-	.logo > *
-		display: none
+		& > *
+			display: none !important
 
-	.logo > img
+		& > img
+			display: block !important
+			float: left !important
+
+	blockquote q::before, blockquote q::after
+		padding: 0 !important
+		margin: 0 !important
+		font-size: 18pt !important
 		display: inline-block !important
