--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -37,7 +37,7 @@ input::-ms-clear
 	display: none
 blockquote, q
 	quotes: none
-blockquote:before, blockquote:after, q:before, q:after
+blockquote::before, blockquote::after, q::before, q::after
 	content: none
 ins
 	text-decoration: none
