--- a/src/sass/components/_breadcrumbs.sass
+++ b/src/sass/components/_breadcrumbs.sass
@@ -15,7 +15,7 @@
 			padding: 0 17px 0 0
 			margin: 0
 
-			&:before, &:first-child:before
+			&::before, &:first-child::before
 				content: none
 
 	@at-root &__list
@@ -27,7 +27,7 @@
 			vertical-align: top
 			position: relative
 
-			&:after
+			&::after
 				content: '/'
 				position: absolute
 				right: 10px
@@ -38,7 +38,7 @@
 				border: none
 				color: $text-color-alt
 
-			&:last-child:after
+			&:last-child::after
 				content: none
 
 			span
