--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -11,7 +11,7 @@
 		&.has-drop
 			padding-right: 2rem
 
-			&:after
+			&::after
 				content: ''
 				position: absolute
 				right: 0.5rem
@@ -24,7 +24,7 @@
 		float: left
 		margin-right: 2rem
 
-		&.has-drop:after
+		&.has-drop::after
 			border-width: 8px 4px
 			border-top-color: tomato
 
@@ -49,7 +49,7 @@
 		font-size: 1.4rem
 		line-height: 1.5
 
-		&.has-drop:after
+		&.has-drop::after
 			border-width: 4px 8px
 			border-left-color: tomato
 
