--- a/src/sass/print/_print.sass
+++ b/src/sass/print/_print.sass
@@ -2,8 +2,8 @@
 
 @media print
 	*,
-	*:before,
-	*:after
+	*::before,
+	*::after
 		background: transparent !important
 		color: black !important
 		box-shadow: none !important
@@ -12,16 +12,16 @@
 	a, a:visited
 		text-decoration: underline
 
-	a[href^=http]:after
+	a[href^=http]::after
 		content: " <" attr(href) "> "
 
-	a[href]:after
+	a[href]::after
 		content: " (" attr(href) ")"
 
-	abbr[title]:after
+	abbr[title]::after
 		content: " (" attr(title) ")"
 
-	a[href^="#"]:after, a[href^="javascript:"]:after
+	a[href^="#"]::after, a[href^="javascript:"]::after
 		content: ""
 
 	pre, blockquote
