--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -18,7 +18,7 @@ $text-color: #262626 !default
 // цвет основных заголовков заголовков
 $title-color: black !default
 // цвет текста светлее основного
-$text-color-light: #262626 !default
+$text-color-light: gray !default
 // цвет для выделения текста
 $text-color-alt: tomato !default
 // цвет ссылки
@@ -65,7 +65,7 @@ $color-btn-bg-hover: darken($color-btn-bg, 20%) !default
 $color-btn-text: white !default
 
 // table color
-$color-table-text: $text-color-light !default
+$color-table-text: $text-color !default
 $color-table-border: tomato !default
 $color-table-bg: white !default
 $color-table-text-alt: white !default
