--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -114,12 +114,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	white-space: nowrap
 
 /*btn*/
-[class|="btn"],
-[class*=" btn-"],
-input[type="submit"],
-input[type="button"],
-input[type="reset"],
-button
+[class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
 	display: inline-block
 	vertical-align: top
 	position: relative
@@ -128,11 +123,8 @@ button
 	box-sizing: border-box
 	cursor: pointer
 
-[class|="btn"],
-[class*=" btn-"]
-	& input[type="submit"],
-	& input[type="button"],
-	& input[type="reset"]
+[class|="btn"], [class*=" btn-"]
+	& input[type="submit"], & input[type="button"], & input[type="reset"]
 		background: url("../../img/empty.png") repeat
 		display: block
 		height: 100%
@@ -142,15 +134,14 @@ button
 		left: 0
 		width: 100%
 		z-index: 99
-		border: 0
+		border: none
 		opacity: 0
 
 /*btn-default*/
 [class*="btn-default"]
 	position: relative
 	+font-title
-	font-size: 1.6rem
-	line-height: 24px
+	+font(1.6rem, 24px)
 	color: $color-btn-text
 	padding: 12px 25px
 	border: 1px solid transparent
@@ -303,8 +294,7 @@ table
 	width: auto
 
 	td, th
-		font-size: 1.4rem
-		line-height: 1.3
+		+font(1.4rem, 1.3)
 		color: $color-table-text
 		padding: 8px 10px
 		box-sizing: border-box
@@ -325,8 +315,7 @@ table
 			color: $color-table-text
 			background-color: $color-table-bg
 			border: 0 solid $color-table-border
-			font-size: 1.4rem
-			line-height: 1.2
+			+font(1.4rem, 1.5)
 
 			&:first-child,
 			&:first-child
@@ -377,13 +366,14 @@ table
 			padding: 0 0 10px
 			font-family: $font-alt
 			+font(round-float($font-size*1.25, 1), $line-height)
-			color: $text-color-light
+			color: $text-color
 			text-align: center
 
 			&::before,
 			&::after
 				+pseudo($pos: relative)
 				+font(4rem, 1)
+				text-align: left
 
 			&::before
 				content: '«'
@@ -400,7 +390,6 @@ table
 			text-align: right
 			display: block
 			margin-left: auto
-			+font-title
 			font-size: $font-size
 			line-height: $line-height
 			color: $text-color-light
@@ -417,16 +406,16 @@ table
 	text-align: left
 	float: left
 	margin: 0 $bottom-space $bottom-space 0
-	max-width: 50%
 
 .imgr
 	text-align: right
 	float: right
 	margin: 0 0 $bottom-space $bottom-space
+
+.imgl, .imgr
 	max-width: 50%
 
-@media only screen and (max-width: 767px)
-	.imgl, .imgr
+	+media('<tablet-sm')
 		float: none
 		display: block
 		margin-left: auto
@@ -455,18 +444,18 @@ table
 	font-size: $font-size
 	letter-spacing: normal
 
-	@media only screen and (max-width: 639px)
+	+media('<mobile-lg')
 		display: block
 		width: auto
 		margin-bottom: $space-bottom-form
 
 .label-holder
-	padding: 0 0 10px
+	padding: 0 0 0.5em
 
 .label-holder, label
 	font-size: inherit
 	line-height: inherit
-	color: $text-color-light
+	color: $text-color
 
 .form-mark
 	display: inline-block
@@ -482,10 +471,8 @@ input[type="text"], input[type="password"], input[type="email"], input[type="sea
 	width: 100%
 	padding: 12px 18px
 	margin: 0 0 $space-bottom-form
-	font:
-		family: $font-norm
-		size: 16px
-	line-height: 24px
+	+font-normal
+	+font(16px, 24px)
 	letter-spacing: normal
 	color: $color-form-text
 	background: $color-form-bg
@@ -510,7 +497,6 @@ input[type="text"], input[type="password"], input[type="email"], input[type="sea
 	&.error, .error > &, .no-touchevents &.error, .no-touchevents .error > &
 		color: $color-form-error
 		border-color: $color-form-error
-		box-shadow: 0 0 5px rgba($color-form-error, 0.4)
 
 textarea
 	padding: 12px 18px
@@ -522,12 +508,11 @@ textarea
 	display: block
 	position: relative
 	float: left
-	font-size: 1.2rem
-	line-height: 1.8
-	color: $color-form-error
-	height: 1.8em
 	width: 100%
-	margin-bottom: -1.8em
+	+font(1.2rem, 1.8)
+	color: $color-form-error
+	height: round-float(1.2rem*1.8, 1)
+	margin-bottom: round-float(-1.2rem*1.8, 1)
 	+truncate
 
 .success-text
