--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -45,6 +45,7 @@
 @import components/files
 @import components/breadcrumbs
 @import components/slider
+@import components/bitrix-search
 
 /*======================================================*/
 /*PAGES*/
