--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -23,7 +23,7 @@
 	width: 100%
 
 .content
-	margin: 0 260px $bottom-space 340px
+	margin: 0 260px $bottom-space-section 340px
 	min-height: 50px
 
 	background-color: whitesmoke
