--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -87,6 +87,13 @@ i, em
 i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	+font-bold-italic
 
+.user-entry
+	+font-bold
+	margin-bottom: $bottom-space
+
+	& > *:last-child
+		margin-bottom: 0
+
 .mark
 	color: $mark-color
 	font-style: inherit
