--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -60,4 +60,4 @@
 /*======================================================*/
 /*PRINT STYLES*/
 /*======================================================*/
-@import "print/print"
+@import print/print
