--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -1,8 +1,8 @@
-@import "variables"
-@import "functions"
+@import variables
+@import functions
 
-@import "../../libs/mathsass/dist/math"
-@import "../../libs/mathsass/dist/functions/tan"
+@import ../../libs/mathsass/dist/math
+@import ../../libs/mathsass/dist/functions/tan
 
 ////
 /// @author Astronim* Serhiy Ilchenko
