--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -8,6 +8,7 @@ $breakpoints: ('mobile-sm': 320px, 'mobile-md': 480px, 'mobile-lg': 640px, 'tabl
 $font-size: 1.8rem !default
 $line-height: round-float(3.0rem/$font-size, 2) !default
 $bottom-space: round-float($font-size*$line-height, 1) !default
+$bottom-space-small: round-float($font-size*$line-height*0.5, 1) !default
 $bottom-space-article: round-float($font-size*$line-height*1.5, 1) !default
 $bottom-space-section: round-float($font-size*$line-height*2, 1) !default
 
