--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -2,7 +2,7 @@
 @import ../utils/placeholders
 
 // medium query
-$breakpoints: ('mobile-sm': 320px, 'mobile-md': 480px, 'mobile-lg': 640px, 'tablet-sm': 768px, 'tablet-lg': 992px, 'desktop-sm': 1200px, 'desktop-md': 1366px, 'desktop-lg': 1600px, 'desktop-hd': 1920px)
+$breakpoints: ('mob-sm': 320px, 'mob-md': 480px, 'mob-lg': 640px, 'tab-sm': 768px, 'tab-lg': 992px, 'desk-sm': 1200px, 'desk-md': 1366px, 'desk-lg': 1600px, 'desk-hd': 1920px)
 
 // base
 $font-size: 1.8rem !default
