--- a/src/sass/components/_bitrix-search.sass
+++ b/src/sass/components/_bitrix-search.sass
@@ -39,7 +39,7 @@
 			top: 50%
 			width: 16px
 			height: 16px
-			+margin($t: -(round(16px/2)), $l: -(round(16px/2)))
+			+margin($top: -(round(16px/2)), $left: -(round(16px/2)))
 			background-repeat: no-repeat
 			background-position: center center
 			background-size: contain
