--- a/src/sass/components/_files.sass
+++ b/src/sass/components/_files.sass
@@ -13,7 +13,7 @@
 
 	svg
 		float: left
-		+margin($t: 0.3em, $b: -0.3em)
+		+margin($top: 0.3em, $bottom: -0.3em)
 		+size($file-icon-size)
 
 	.st-bg
