--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -145,7 +145,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		opacity: 0
 
 /*btn-default*/
-[class*="btn-default"], .#{$user-content} input[type="submit"], .#{$user-content} [type="button"], .#{$user-content} [type="reset"], .#{$user-content} button
+[class*="btn-default"]
 	position: relative
 	+font-title
 	+font(1.6rem, 24px)
