--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -13,7 +13,7 @@
 .footer-bottom
 	color: $text-color
 
-	+media('>desktop-hd')
+	+media('<desk-hd')
 		.footer-bottom
 			&__col
 				max-width: 73.9%
@@ -21,7 +21,7 @@
 				&:last-child
 					max-width: 24.9%
 
-	+media('>tablet-sm')
+	+media('<tab-sm')
 		.footer-bottom
 			&__col
 				max-width: 59.9%
