--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -28,10 +28,10 @@
 
 	background-color: whitesmoke
 
-	+media('<desktop-lg')
+	+media('<desk-lg')
 		margin-right: 0
 
-	+media('<tablet-lg')
+	+media('<tab-lg')
 		margin-left: 0
 
 .header
@@ -48,7 +48,7 @@
 
 	background-color: sandybrown
 
-	+media('<tablet-lg')
+	+media('<tab-lg')
 		display: none
 
 .aside
@@ -59,7 +59,7 @@
 
 	background-color: sandybrown
 
-	+media('<desktop-lg')
+	+media('<desk-lg')
 		display: none
 
 .footer
@@ -77,7 +77,7 @@
 	+padding-horizontal($layout-space-horizontal)
 	+push-auto
 
-	+media('<tablet-lg')
+	+media('<tab-lg')
 		+padding-horizontal(0)
 
 .max-wrap-text
@@ -88,10 +88,10 @@
 	+padding-horizontal($layout-text-space-horizontal)
 	+push-auto
 
-	+media('<tablet-lg')
+	+media('<tab-lg')
 		+padding-horizontal($layout-text-space-horizontal-md)
 
-	+media('<tablet-sm')
+	+media('<tab-sm')
 		+padding-horizontal($layout-text-space-horizontal-sm)
 
 .max-wrap-flood
@@ -102,10 +102,10 @@
 	+padding-horizontal($layout-flood-space-horizontal)
 	+push-auto
 
-	+media('<tablet-lg')
+	+media('<tab-lg')
 		+padding-horizontal($layout-text-space-horizontal-md)
 
-	+media('<tablet-sm')
+	+media('<tab-sm')
 		+padding-horizontal($layout-text-space-horizontal-sm)
 
 /*LAYOUT end*/
